--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./index.css" />
 
-    <title>Static Template</title>
+    <title>Aim trainer</title>
   </head>
   <body>
     <div id="dot"></div>
